Bug 168030 - Okular crash on opening djvu file
Summary: Okular crash on opening djvu file
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: DjVu backend (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-01 20:38 UTC by Alexander Opachev
Modified: 2008-08-06 06:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Opachev 2008-08-01 20:38:07 UTC
Version:           Okular 0.7 (using KDE 3.5.9)
Installed from:    Debian testing/unstable Packages
OS:                Linux

Okular crash on opening djvu file when i go on 2 page (2 and later pages turn 90 degree) file: http://rapidshare.com/files/17129218/RicZMP.rar sorry for my english.

log:


Application: Okular (okular), signal SIGABRT
[Thread debugging using libthread_db enabled]
[New Thread 0xb6137700 (LWP 22471)]
[New Thread 0xb1ea9b90 (LWP 22620)]
[New Thread 0xb2eabb90 (LWP 22618)]
[KCrash handler]
#6  0xb7f6b424 in __kernel_vsyscall ()
#7  0xb69d8640 in raise () from /lib/i686/cmov/libc.so.6
#8  0xb69da018 in abort () from /lib/i686/cmov/libc.so.6
#9  0xb6a1534d in ?? () from /lib/i686/cmov/libc.so.6
#10 0x00000010 in ?? ()
#11 0xb2eaab54 in ?? ()
#12 0x00000400 in ?? ()
#13 0xb6aeb4c8 in ?? () from /lib/i686/cmov/libc.so.6
#14 0x00000017 in ?? ()
#15 0xbf986bd1 in ?? ()
#16 0x00000006 in ?? ()
#17 0xb6aeb4e1 in ?? () from /lib/i686/cmov/libc.so.6
#18 0x00000002 in ?? ()
#19 0xb6aeb538 in ?? () from /lib/i686/cmov/libc.so.6
#20 0x00000022 in ?? ()
#21 0xb6aeb4e5 in ?? () from /lib/i686/cmov/libc.so.6
#22 0x00000004 in ?? ()
#23 0xb2eab083 in ?? ()
#24 0x00000008 in ?? ()
#25 0xb6aeb4eb in ?? () from /lib/i686/cmov/libc.so.6
#26 0x00000005 in ?? ()
#27 0xb2eaaa78 in ?? ()
#28 0xb6a1d6f6 in free () from /lib/i686/cmov/libc.so.6
#29 0xb6a1b4f4 in ?? () from /lib/i686/cmov/libc.so.6
#30 0x00000002 in ?? ()
#31 0xb6aeb4c8 in ?? () from /lib/i686/cmov/libc.so.6
#32 0xbf986bd1 in ?? ()
#33 0xb6aeb538 in ?? () from /lib/i686/cmov/libc.so.6
#34 0xb2eab083 in ?? ()
#35 0xb6aeb538 in ?? () from /lib/i686/cmov/libc.so.6
#36 0x30eab150 in ?? ()
#37 0x63393239 in ?? ()
#38 0x00303631 in ?? ()
#39 0xb6b03ff4 in ?? () from /lib/i686/cmov/libc.so.6
#40 0xb6b05160 in ?? () from /lib/i686/cmov/libc.so.6
#41 0x0929c160 in ?? ()
#42 0xb2eab0b8 in ?? ()
#43 0xb6a1d6f6 in free () from /lib/i686/cmov/libc.so.6
Backtrace stopped: frame did not save the PC

Thread 2 (Thread 0xb1ea9b90 (LWP 22620)):
#0  0xb7f6b424 in __kernel_vsyscall ()
#1  0xb643f025 in pthread_cond_wait@@GLIBC_2.3.2 ()
   from /lib/i686/cmov/libpthread.so.0
#2  0xb6a9b69d in pthread_cond_wait () from /lib/i686/cmov/libc.so.6
#3  0xb6c4ca02 in QMutexPrivate::wait (this=0x8eede90, timeout=-1)
    at thread/qmutex_unix.cpp:85
#4  0xb6c47f8a in QMutex::lock (this=0x8ee9918) at thread/qmutex.cpp:188
#5  0xb5efeefa in DjVuGenerator::textPage (this=0x8bb9898, page=0x8efa070)
    at /tmp/buildd/okular-0.7/okular/generators/djvu/generator_djvu.cpp:232
#6  0xb49d7f4a in Okular::TextPageGenerationThread::run (this=0x8f54fb0)
    at /tmp/buildd/okular-0.7/okular/core/generator_p.cpp:103
#7  0xb6c4d322 in QThreadPrivate::start (arg=0x8f54fb0)
    at thread/qthread_unix.cpp:190
#8  0xb643b4c0 in start_thread () from /lib/i686/cmov/libpthread.so.0
#9  0xb6a8d55e in clone () from /lib/i686/cmov/libc.so.6

Thread 1 (Thread 0xb6137700 (LWP 22471)):
#0  0xb7f6b424 in __kernel_vsyscall ()
#1  0xb6a9b9f3 in ?? () from /lib/i686/cmov/libc.so.6
#2  0xb6a20c4d in ?? () from /lib/i686/cmov/libc.so.6
Backtrace stopped: previous frame identical to this frame (corrupt stack?)
#0  0xb7f6b424 in __kernel_vsyscall ()
Comment 1 Pino Toscano 2008-08-01 21:36:12 UTC
The rar you provided contains only a file called:
  Рыцарские замки, метательные машины и пушки средневековья.pdf
are you really sure that is the correct document?
Comment 2 Alexander Opachev 2008-08-02 05:51:13 UTC
>The rar you provided contains only a file called:
> Рыцарские замки, метательные машины и пушки средневековья.pdf
>are you really sure that is the correct document?

Yes. This document is the correct. Name of file in russian language. DjView3 and DjView4 open this document normal. Sorry for my english :(
Comment 3 Alexander Opachev 2008-08-02 06:09:19 UTC
Sorry i show not this book. Book cause the bug -- http://depositfiles.com/ru/files/3753902 . Sorry me please. :(
Comment 4 Pino Toscano 2008-08-02 17:52:55 UTC
Thanks for the report, and the document.
I am able to reproduce the problem, but it needs better investigation about the real cause.
Of course, if there are news, we will let them known.

(PS: no need to feel sorry for the english or the document, it's ok :) )
Comment 5 Alexander Opachev 2008-08-03 06:47:24 UTC
Experiment:
1. Extract one page in djvu from doc by DjView3. Open this page -> crash.
2. Export one page as picture from doc by DjView3. Convert picture to djvu -> opening normal.
Comment 6 Pino Toscano 2008-08-06 06:16:50 UTC
SVN commit 842846 by pino:

Apply workaround as suggested by DjVuLibre's maintainer Leon Bottou to avoid a potential crash in rare situations.
The real fix should be applied already in DjVuLibre's CVS.
Thanks Leon!

BUG: 168030


 M  +3 -0      kdjvu.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=842846
Comment 7 Pino Toscano 2008-08-06 06:19:10 UTC
SVN commit 842847 by pino:

Backport workaround Leon Bottou's workaround for DjVuLibre crash.
Will be in KDE 4.1.1.

CCBUG: 168030


 M  +3 -0      kdjvu.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=842847