Apply workaround as suggested by DjVuLibre's maintainer Leon Bottou to avoid a potential crash in rare situations. The real fix should be applied already in DjVuLibre's CVS. Thanks Leon!

BUG: 168030

svn path=/trunk/KDE/kdegraphics/okular/; revision=842846